--- a/NetbankApplication/NetbankApplication-war/web/accountStatement.xhtml
+++ b/NetbankApplication/NetbankApplication-war/web/accountStatement.xhtml
@@ -1,19 +1,18 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
         <title>Account statement</title>
     </h:head>
-    <f:event type="preRenderView" listener="#{netbankManagedBean.showTransactions()}" />
-    <h:body>
-        <br></br>
-            
-        <h3>
+    <f:event type="preRenderView" 
+             listener="#{netbankManagedBean.showTransactions()}" />
+    <h:body>    
+        <h2>
             Account statement
-        </h3>
-        <br></br>
+        </h2>
         <h:dataTable value="#{netbankManagedBean.transactions}" var="trans"
                      border="1">
             <h:column>
