Added logout functionality.

--- a/NetbankApplication/NetbankApplication-war/web/menu.xhtml
+++ b/NetbankApplication/NetbankApplication-war/web/menu.xhtml
@@ -34,6 +34,10 @@
                 </h:outputLink>
             </li>
         </ol>
+        <h:form>
+        <h:commandButton id="logout" value="Logout" 
+                             action="#{netbankManagedBean.logout()}"/>
+        </h:form>
     </h:body>
 </html>
 
